<resources>
    <string name="app_name">kf5sdk-master-v2</string>
    <string name="kf5_sdk_name">逸创云客服</string>
    <string name="login">登录</string>
    <string name="help_center">帮助中心</string>
    <string name="about_us">关于我们</string>
    <string name="feed_back">提交反馈</string>
    <string name="look_feed_back">查看反馈</string>
    <string name="chat">即时交谈</string>
    <string name="setting">设置</string>
    <string name="language_setting">语言设置</string>
    <string name="chinese">中文</string>
    <string name="english">英语</string>
</resources>
